exports[`snapshots should display the correct default name 1`] = `
<div>
  <div>
    <div>
      Hello, 
      world
    </div>
    <input
      onChange={[Function]}
      type="text"
      value="world" />
  </div>
</div>
`;

exports[`snapshots should display the correct name when it is set 1`] = `
<div>
  <div>
    <div>
      Hello, 
      John Doe
    </div>
    <input
      onChange={[Function]}
      type="text"
      value="John Doe" />
  </div>
</div>
`;
